--- a/style.css
+++ b/style.css
@@ -75,3 +75,31 @@ h2{
     transform: translateY(-5px);
     box-shadow: 0 8px 16px rgba(0,0,0,0.7);
 }
+.kicsi-kep{
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+@media (max-width: 768px) {
+    body{
+        font-size: 20px;
+        padding-left: 10px;
+    }
+    .card{
+        padding: 10px;
+        margin: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    nav ul{
+        flex-direction: column;
+        align-items: center;
+    }
+    nav ul li a {
+        display: block;
+        margin: 5px 1; 
+    }
+}
