--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav ul li a{
     text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 
     border: 2px solid rgb(31, 0, 49);
-    transition: 0.3 ease;
+    transition: 0.3s ease;
 }
 nav ul li a:hover{
     background-color: rgba(255, 255, 255, 0.932);
@@ -98,7 +98,7 @@ h2{
     }
     nav ul li a {
         display: block;
-        margin: 5px 1; 
+        margin: 5px 1px ; 
     }
 }
 .navbar {
@@ -153,8 +153,8 @@ h2{
     }
 
     .nav-links.show{
-        display: flex;
-        max-height: 300px;
+        max-height: 500px;
+        padding: 10px;
     }
 
     .menu-toggle{
@@ -170,6 +170,6 @@ h2{
     opacity: 1;
     transform: translateY(0);
 }
-.nav-links.show li:nth-child(1) { transition-delay: 0.1; }
-.nav-links.show li:nth-child(2) { transition-delay: 0.2; }
-.nav-links.show li:nth-child(3) { transition-delay: 0.3; }
+.nav-links.show li:nth-child(1) { transition-delay: 0.1s; }
+.nav-links.show li:nth-child(2) { transition-delay: 0.2s; }
+.nav-links.show li:nth-child(3) { transition-delay: 0.3s; }
