--- a/style.css
+++ b/style.css
@@ -59,6 +59,19 @@ nav ul{
 }
 h2{
     color: brown;
+    position:relative;
+    display: inline-block;
+    padding-bottom: 5px;
+}
+
+h2::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: rgb(165, 42, 42);
+    bottom: 0;
+    left: 0;
 }
 .card{
     background: rgba(255, 255, 255, 0.1);
@@ -166,10 +179,72 @@ h2{
     transform: translateY(-10px);
     transition: opacity 0.3s ease, transform 0.3s ease;
 }
-.nav-links.nav-links.show li{
+.nav-links.show li{
     opacity: 1;
     transform: translateY(0);
 }
 .nav-links.show li:nth-child(1) { transition-delay: 0.1s; }
 .nav-links.show li:nth-child(2) { transition-delay: 0.2s; }
 .nav-links.show li:nth-child(3) { transition-delay: 0.3s; }
+
+@media (min-width: 769px) {
+    .nav-links {
+        display: flex !important;
+        max-height: none !important;
+        overflow: visible !important;
+    }
+
+    .nav-links li {
+        opacity: 1 !important;
+        transform: translateY(0) !important;
+    }
+}
+
+.build-gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.build-item{
+    background-color: rgba(255, 255, 255, 0.08);
+    border-radius: 10px;
+    width: 250px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    max-width: 300px;
+    text-align: center;
+    padding: 10px;
+    transition: transform 0.3 ease;
+}
+
+.build-item:hover{
+    transform: scale(1.03);
+}
+
+.build-item img{
+    width: 100%;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.build-card img p {
+    text-align: center;
+    margin-top: 10px;
+    color: wheat;
+}
+
+#builds-p{
+    font-size: larger;
+}
+
+body{
+    cursor:crosshair;
+}
+
+.kepek {
+    color:rgb(134, 161, 248);
+}
